Added password hashing and upgraded database, better lobbies structure and many other things in the whole code